# vau-hsm

./: .gitignore  DESIGN.MD  Dependencies.md  Jenkinsfile  License.md  README.md  build.gradle  dev - Shortcut.lnk  settings.gradle  version.txt
client/: CMakeLists.txt  CMakeSettings.json  README.md  README_eng.md  conanfile.py  conanfile.txt
client/cmake/: Asn.cmake  BuildOptions.cmake  ClangTidy.cmake  Conan.cmake  Dependencies.cmake  Installation.cmake  TargetConfiguration.cmake
client/src/: CMakeLists.txt  ERP_ASNUtils.c  ERP_ASNUtils.h  ERP_Client.c  ERP_Client.h  ERP_Error.h  ERP_SFC.h  ERP_Types.asn1  ERP_Utils.c  ERP_Utils.h
client/test/: CMakeLists.txt  ERP_AUTTests.cpp  ERP_AttestTests.cpp  ERP_BasicInputTests.cpp  ERP_BlobMigrationAndIdentityTests.cpp  ERP_ClusterTests.cpp  ERP_ECIESTests.cpp  ERP_HashKeyTests.cpp  ERP_InvalidDataTests.cpp  ERP_PermissionsTests.cpp  ERP_PseudonameKeyTests.cpp  ERP_PseudonymLogKeyTests.cpp  ERP_RUAttestationTests.cpp  ERP_SealedBlobManipulator.h  ERP_SingleBlobKeyBackupTests.cpp  ERP_TestParams.cpp  ERP_TestParams.h  ERP_TestUtils.cpp  ERP_TestUtils.h  ERP_Tests.cpp  ERP_TestsBase.cpp  ERP_TestsBase.h  ERP_VAUSIGTests.cpp  ERP_WrapRawPayloadTests.cpp  HATesting.md  SavedData.md
client/test/resources/: 20220623NovutonTUProblemTPMCert.crt  AKPub.der  AKPub.pem  AUTCert.csr.cnf  AddHsmUser.bat  EKCertECC.crt  EKPub.der  EKPub.pem  GenerateTPMTestData.bat  GentleTPMStartup.bat  PKCS#8 RFC 5208 5915 5480 Format.txt  Public Key formats.txt  QuoteNONCE.blob  README.MD  TPMSession.txt  activateHSMCredential.bat  attestparsed.txt  cacert.crt  candidateAUT.csr  candidateECIES.csr  candidateVAUSIG.csr  candidateVAUSIG.csr.bak  encrypted-request-example.txt  erpprimpub.name  parsed VAUSIG CSR.txt  trustedEK.blob
client/test/resources/rusaved/: AKChallengeSaved.blob  RazvanEciesKeyPairSaved.blob  RazvanEciesKeyPairSaved.blob.bak  RazvanVausigKeyPairSaved.blob  RazvanVausigKeyPairSaved.blob.bak  auditDerivationKeySaved.blob  commsDerivationKeySaved.blob  eciesKeyPairSaved.blob  generatedECIES.csr  generatedVAUSIG.csr  hashKeySaved.blob  staticTEETokenSaved.blob  taskDerivationKeySaved.blob  trustedAkSaved.blob  trustedEKSaved.blob  trustedMfrRoot.blob  trustedQuoteSaved.blob  vausigKeyPairSaved.blob
client/test/resources/saved/: AKChallenge2Saved.blob  AKChallengeSaved.blob  AUTKeyPairSaved.blob  AUTKeyPairSaved.pem  AttestationQuoteNONCESaved.blob  ECIESKeyPairSaved.blob  EKCertECC.crt  EnrollmentQuoteNONCESaved.blob  GemSpecClientECIESPub.bin.bak  HashKeySaved.blob  PseudonameKeySaved.blob  PseudonymizationLogKey.blob  StaticDerivationKey.blob  StaticTEEToken.blob  StaticTEETokenSaved.blob  TrustedAk.blob  TrustedQuote.blob  VAUSIGKeyPairSaved.blob  VAUSIGKeyPairSaved.pem  dev2_erp_vau_sig_keypair.blob  generatedAUT.csr  trustedAkSaved.blob  trustedEK.blob  trustedEKSaved.blob  trustedQuoteSaved.blob  trustedRoot.blob  trustedRootSaved.blob  vsdmkeyA1.blob  vsdmkeyA2.blob
firmware/: CMakeLists.txt  CMakeSettings.json  README.md  README_eng.md  conanfile.py  conanfile.txt
firmware/HA/: erp-hsm-ha.yaml  erp-two-hsms.yaml
firmware/HWMake/: IBM_eRP_RU_AltMdlSig.key  IBM_eRP_RU_RSAAltMdlSig.key  make.sh  make_ERP_PU_Release.bat  make_ERP_Production.bat  make_ERP_RU_Release.bat  make_ERP_Release.bat  make_clean.bat  make_clean.sh  make_ti_docker.sh  makedefs4.inc  makefile  makefile_ti_docker  pathdefs_ti_docker.inc  pathdefs_win.inc
firmware/HWMake/installedFW/0.1.6.0/: ERP.mtc
firmware/cmake/: Deployment.cmake  DeploymentOptions.cmake  Hsm.cmake  Utils.cmake
firmware/docker/: Dockerfile  Dockerfile.dockerignore  README.md
firmware/hsm/backup/databases/: ERP_BlobK.db  user.db
firmware/hsm/backup/mbk/: 2_of_3.mbk  3_of_3.mbk  README.md
firmware/src/: CMakeLists.txt  ERP.h  ERP_ASNUtils.c  ERP_ASNUtils.h  ERP_Audit.c  ERP_Audit.h  ERP_AuditIDs.h  ERP_Blob.c  ERP_Blob.h  ERP_CryptoUtils.c  ERP_CryptoUtils.h  ERP_Defs.h  ERP_ExternalAPI.c  ERP_ExternalAPI.h  ERP_GlobalGlue.c  ERP_InternalGlue.c  ERP_InternalGlue.h  ERP_MDLError.h
gradle/: release.gradle
kubernetes/: 01_service.yml  02_deployment.yml  03_service.yml  04_deployment.yml
